# FoodShareApp

./: .flake8  .gitignore  Makefile  README.md  alembic.ini  check_db.py  load_sql.py  mypy.ini  package-lock.json  pyproject.toml
.circleci/: config.yml  main.yml
.github/: CODEOWNERS
.github/workflows/: auto_assign.yml  close-linked-issues.yml  frontend-tests.yml  pr-title-check.yml
clientapp/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vue.config.js
clientapp/src/: App.vue  main.js
clientapp/src/components/: GoogleMap.vue  NavBar.vue
clientapp/src/pages/: HomePage.vue
clientapp/src/router/: index.js
clientapp/src/services/: api-client.js  authService.js  foodService.js  health-check.js  mapService.js  reservationService.js  userService.js
clientapp/src/utils/: authState.js  (+1 more)
db_loader/: business_fill.sh  check_db.py  load_sql.py  user_fill.sh
deploy_env/: .dev.env  Dockerfile  dev_entrypoint.sh  docker-compose.dev.yml  docker-compose.yml  load_sample_data.py
foodshareapp/: __main__.py  settings.py
foodshareapp/app/: application.py  lifetime.py
foodshareapp/db/: utils.py
foodshareapp/tests/: conftest.py  test_auth.py  test_basics.py  test_database.py  test_donations.py  test_foodbanks.py  test_inventory.py  test_register.py  test_register_business.py  test_register_user.py  test_reservations.py  test_user.py
foodshareapp_api/: __main__.py
foodshareapp_api/db/: utils.py
foodshareapp_api/tests/: test_basics.py
sql_scripts/: 01_create_tables.sql  02_upload_data.sql
src/foodshareapp/: settings.py
(+74 files in other folders)
