[tool.poetry]
name = "foodshareapp"
version = "0.1.0"
description = ""
authors = ["alex john, dillion kilgallon, ine park, kyle cortez"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.10.2"}
yarl = "^1.7.2"
ujson = "^5.1.0"
asyncpg = "^0.27.0"
aiofiles = "^0.8.0"
httptools = "^0.3.0"
databases = "^0.6.1"
bcrypt = "^4.0.0"
passlib = "^1.7.4"
email-validator = "^1.2.1"
starlette-exporter = "^0.14.0"
SQLAlchemy = "^1.4.40"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
requests = "^2.28.1"
jwt = "^1.3.1"
redis = "^4.3.5"
dnspython = "^2.2.1"
httpx = "^0.23.1"
alembic = "^1.8.1"
Jinja2 = "^3.1.2"
aioredis = "^2.0.1"
uvloop = "^0.17.0"
pytest-asyncio = "^0.20.3"
starlette-testclient = "^0.2.0"
trio = "^0.22.0"
anyio = "^3.0.0"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"